--- a/awards.html
+++ b/awards.html
@@ -765,7 +765,7 @@
             <div class="section-header">
               <h2>Inaugural Pan-Africa ESG Awards</h2>
               <img
-                src="img/core-img/esg-awards.jpeg"
+                src="img/core-img/esg-awards.png"
                 alt="ESG Awards Logo"
                 class="esg-awards-badge"
               />
@@ -781,31 +781,39 @@
             <p class="lead-paragraph fade-in-up">
               AFRICAN SECURITIES EXCHANGES ASSOCIATION (ASEA) IN COLLABORATION
               WITH RISK INSIGHTS TO HOST THE INAUGURAL PAN-AFRICA ESG AWARDS.
-              The African Securities Exchanges Association (ASEA) is proud to
-              announce its collaboration with Risk Insights, a leading provider
-              of cutting-edge ESG Data and Ratings solutions for Africa, to host
-              the inaugural Pan-Africa ESG Awards at the Annual Conference of
-              ASEA to be held in Kigali, Rwanda from 26th – 28th November, 2025.
+            </p>
+            <p>
+              The African Securities Exchanges Association (ASEA) proudly
+              announces its strategic partnership with Risk Insights, a premier
+              provider of innovative ESG Data and Ratings solutions for Africa,
+              to present the inaugural Pan-Africa ESG Awards during the Annual
+              Conference of ASEA in Kigali, Rwanda from 26th – 28th November
+              2025.
             </p>
             <p class="fade-in-up" style="animation-delay: 0.1s">
-              This prestigious event marks a significant milestone in
-              recognising and advancing ESG and sustainability leadership across
-              the continent and the globe. The awards evening and gala dinner
-              will convene industry leaders, sustainability executives,
-              regulators, and market participants from across Africa and beyond
-              to celebrate outstanding achievements in environmental, social,
-              and governance (ESG) practices.
+              This landmark event represents a pivotal moment in recognizing and
+              championing ESG and sustainability excellence across the continent
+              and globally. The awards ceremony and gala dinner will unite
+              industry pioneers, sustainability champions, regulatory leaders,
+              and market innovators from across Africa and beyond to honour
+              exceptional achievements in environmental, social, and governance
+              (ESG) practices.
             </p>
             <p class="fade-in-up" style="animation-delay: 0.15s">
-              A distinguished panel of adjudicators comprising ESG and capital
-              markets experts from Africa and internationally will carefully
-              assess the award categories using data-driven insights to ensure
-              transparency and objectivity. Independent oversight will be
-              provided by ASEA’s audit partners, further reinforcing the
-              credibility and integrity of the selection process. Several award
-              categories will be presented to honour excellence in non-financial
-              disclosure, innovation in sustainability, and commitment to
-              responsible business conduct.
+              An esteemed panel of adjudicators featuring ESG and capital
+              markets specialists from Africa and internationally will
+              meticulously evaluate award categories using evidence-based
+              insights to guarantee transparency and impartiality. Independent
+              validation will be conducted by ASEA's audit partners, further
+              strengthening the credibility and trustworthiness of the
+              evaluation process. Multiple award categories will be presented to
+              celebrate excellence in non-financial reporting, sustainability
+              innovation, and dedication to ethical business practices.
+              transparency, objectivity, and credibility in our selection
+              process. Multiple award categories will recognize excellence
+              across ESG disclosure quality, sustainability innovation, and
+              transformative responsible business leadership that sets new
+              benchmarks for African capital markets.
             </p>
           </div>
           <div class="col-lg-5">
@@ -817,7 +825,7 @@
                   dinner
                 </li>
                 <li><strong>Venue:</strong> Kigali, Rwanda</li>
-                <li><strong>Dates:</strong> 26–28 November 2025</li>
+                <li><strong>Dates:</strong> 28 November 2025</li>
                 <li>
                   <strong>Focus:</strong> ESG leadership & sustainable market
                   development
@@ -867,7 +875,7 @@
                 African markets and businesses to lead with transparency,
                 sustainability, and innovation.”
               </blockquote>
-              <footer>ANUSHKA BOGDANOV – CHAIRLADY, RISK INSIGHTS</footer>
+              <footer>Dr Daniel Matjila - Director, Risk Insights</footer>
             </div>
           </div>
         </div>
@@ -881,30 +889,31 @@
           <div class="col-lg-6 mb-5 mb-lg-0">
             <h3 class="subheading">Data-Driven Integrity</h3>
             <p>
-              Through its pioneering ESG GPS™ tool and strategic partnerships,
-              Risk Insights remains at the forefront of integrating AI and big
-              data into ESG and risk assessment, empowering organizations across
-              Africa to navigate the evolving sustainability landscape.
+              Through its groundbreaking ESG GPS™ platform and strategic
+              alliances, Risk Insights continues to lead the integration of
+              artificial intelligence and big data into ESG and risk evaluation,
+              enabling organizations across Africa to master the dynamic
+              sustainability environment.
             </p>
             <div class="esg-pillars">
               <div class="pillar">
                 <h4>Environmental</h4>
                 <p>
-                  Recognition of climate stewardship, resource efficiency &
-                  adaptive resilience.
+                  Celebrating climate leadership, resource optimization &
+                  adaptive innovation.
                 </p>
               </div>
               <div class="pillar">
                 <h4>Social</h4>
                 <p>
-                  Advancing inclusion, workforce wellbeing, stakeholder
-                  engagement & equity.
+                  Championing inclusion, employee wellbeing, stakeholder
+                  collaboration & fairness.
                 </p>
               </div>
               <div class="pillar">
                 <h4>Governance</h4>
                 <p>
-                  Promoting ethics, transparency, board diversity & accountable
+                  Fostering ethics, transparency, board diversity & responsible
                   leadership.
                 </p>
               </div>
@@ -913,33 +922,34 @@
           <div class="col-lg-6">
             <h3 class="subheading">Transparent Selection Process</h3>
             <p>
-              The adjudication process is designed to reinforce confidence,
-              credibility and comparability across markets—supporting long-term
-              sustainable value creation.
+              The evaluation methodology is structured to enhance confidence,
+              credibility and consistency across markets—supporting sustained
+              sustainable value generation.
             </p>
             <ol class="process-steps">
               <li>
-                <strong>Independent Evaluation:</strong> Multi-disciplinary
-                panel featuring African & international ESG and capital markets
-                experts.
+                <strong>Independent Assessment:</strong> Multidisciplinary
+                committee comprising African & international ESG and capital
+                markets authorities.
               </li>
               <li>
-                <strong>Data-Led Analysis:</strong> Leveraging structured ESG
-                metrics & ratings to ensure objectivity in shortlisting and
-                final selection.
+                <strong>Evidence-Based Evaluation: </strong> Utilizing
+                comprehensive ESG metrics & ratings to guarantee objectivity in
+                screening and final determination.
               </li>
               <li>
-                <strong>Audit Oversight:</strong> Independent assurance by
-                ASEA’s audit partners to uphold integrity and procedural rigor.
+                <strong>Audit Verification:</strong> Independent validation by
+                ASEA's audit partners to maintain integrity and procedural
+                excellence.
               </li>
               <li>
-                <strong>Balanced Recognition:</strong> Focus on disclosure
-                quality, innovation, sustainability integration & responsible
-                conduct.
+                <strong>Comprehensive Recognition:</strong> Emphasis on
+                reporting quality, innovation, sustainability integration &
+                ethical conduct.
               </li>
               <li>
-                <strong>Continental Impact:</strong> Catalysing improved ESG
-                standards and investor confidence across African markets.
+                <strong>Continental Influence:</strong> Driving enhanced ESG
+                standards and investor trust across African markets.
               </li>
             </ol>
           </div>
