--- a/sponsors.html
+++ b/sponsors.html
@@ -992,7 +992,7 @@
                   <p class="mb-1">
                     <i class="fas fa-envelope mr-2"></i>ialice@rse.rw
                   </p>
-                  <p><i class="fas fa-phone mr-2"></i>+250 788 XXX XXX</p>
+                  <p><i class="fas fa-phone mr-2"></i>+250 788 463 015</p>
                 </div>
               </div>
 
