--- a/index.html
+++ b/index.html
@@ -1372,7 +1372,7 @@
           <div class="host-item">
             <span class="host-label">FEATURING</span>
             <img
-              src="img/core-img/esg-awards.jpeg"
+              src="img/core-img/logo esggps with TM.png"
               alt="Pan-Africa ESG Awards"
             />
           </div>
