--- a/index.html
+++ b/index.html
@@ -1688,7 +1688,7 @@
                   width: 100%;
                   height: 100%;
                 "
-                src="https://www.youtube.com/embed/QeA4KOMbJq4"
+                src="https://www.youtube.com/embed/hi5-ZnnVayA"
                 title="Visit Rwanda Video"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
