--- a/speakers.html
+++ b/speakers.html
@@ -1105,7 +1105,7 @@
           </div>
 
           <!-- Speaker 8 -->
-          <div class="col-lg-3 col-md-6 col-sm-6">
+          <!-- <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="csd">
               <div class="speaker-image">
                 <img
@@ -1135,7 +1135,7 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="csd">
               <div class="speaker-image">
