--- a/speakers.html
+++ b/speakers.html
@@ -1225,23 +1225,39 @@
                   <h4>CEO, Nairobi Securities Exchange</h4>
                   <div class="speaker-modal-bio">
                     <p>
-                      Frank Mwiti serves as the Chief Executive Officer of the
-                      Nairobi Securities Exchange (NSE), where he has been
-                      instrumental in driving technological innovation and
-                      market development across East Africa.
+                      Mr. Frank Mwiti is the CEO of the Nairobi Securities
+                      Exchange Plc. Mr. Mwiti is a dynamic and accomplished
+                      senior business leader with more than two decades of
+                      diverse global and regional professional experience in
+                      strategy, governance, business development, Corporate
+                      Finance, M&amp;A, investment banking, risk management and
+                      performance improvement. He has advised governments,
+                      investors, shareholders, boards and CEOs across the UK,
+                      US, EU, Russia, Middle East, Asia and Africa.
                     </p>
                     <p>
-                      With over 15 years of experience in capital markets, Mr.
-                      Mwiti has led initiatives to enhance market liquidity,
-                      improve investor access, and strengthen regulatory
-                      frameworks. He holds an MBA in Finance and has been
-                      recognized for his leadership in emerging market
-                      development.
+                      Prior to his appointment as the CEO of the Nairobi
+                      Securities Exchange Plc, he served as a Partner and
+                      Eastern Africa Markets Leader at EY, leading Strategy,
+                      M&amp;A and Business Development across Kenya, Ethiopia,
+                      Uganda, Tanzania, Rwanda, Burundi, Somalia and South
+                      Sudan. He previously held senior executive roles in London
+                      (UK) at UBS Investment Bank, Deutsche Bank, EY and PwC.
                     </p>
                     <p>
-                      At the ASEA Conference 2025, Mr. Mwiti will share insights
-                      on leveraging technology to create more inclusive and
-                      efficient capital markets across Africa.
+                      Mr. Mwiti equally served as CEO and Managing Director at
+                      Afrika Kapital in the UK, a firm he founded and in which
+                      he was involved in advising investment banks, private
+                      equity firms and hedge funds across forex, equities, fixed
+                      income, commodities, synthetics and listed derivatives in
+                      London, New York, Frankfurt, Singapore, Moscow, and Hong
+                      Kong.
+                    </p>
+                    <p>
+                      Mr. Mwiti holds an Executive Management qualification from
+                      MIT (US), a Bachelor of Laws (LL.B) degree from the
+                      University of Nairobi and is a member of the Institute of
+                      Certified Public Accountants of Kenya (ICPAK).
                     </p>
                     <h5>
                       Session: "Digital Transformation in African Exchanges"
