--- a/index.html
+++ b/index.html
@@ -1183,8 +1183,9 @@
               <div class="hero-content">
                 <h1>ASEA Conference 2025</h1>
                 <p>
-                  Adapting to Global Market Shifts: Strategies for Resilience
-                  and Growth
+                  ADAPTING TO GLOBAL MARKET SHIFTS AND EVENTS STRATEGIES FOR
+                  RESILIENCE AND GROWTH FOR AFRICAN CAPITAL MARKETS FOR THE
+                  FUTURE
                 </p>
                 <div class="hero-meta">
                   <div class="meta-item">
