--- a/speakers.html
+++ b/speakers.html
@@ -1167,6 +1167,39 @@
               </div>
             </div>
           </div>
+
+          <!-- Speaker 10 - Paul Bwiso -->
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="ceo">
+              <div class="speaker-image">
+                <img
+                  src="img/speakers/Paul Bwiso.jpeg"
+                  alt="Paul Bwiso"
+                />
+                <div class="speaker-category">CEO</div>
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-globe"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Paul Bwiso</h3>
+                <h4>CEO, Uganda Securities Exchange</h4>
+                <p>Investment Banking and Accounting Expert</p>
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModal10"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -1872,6 +1905,73 @@
                     <p>
                       Date: November 28, 2025 | Time: 10:00 AM - 11:00 AM |
                       Venue: Conference Room B
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal 10 - Paul Bwiso -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModal10"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img src="img/speakers/Paul Bwiso.jpeg" alt="Paul Bwiso" />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-globe"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Paul Bwiso</h3>
+                  <h4>CEO, Uganda Securities Exchange</h4>
+                  <h5>Nationality: Ugandan | Background: Investment Banking and Accounting</h5>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Mr. Bwiso is the Chief Executive of the Uganda Securities Exchange (USE). He is an accomplished investment banker with extensive experience in the financial services sector in the areas of asset management, corporate finance and securities trading.
+                    </p>
+                    <p>
+                      An accountant by training, Mr. Bwiso has over 20 years' experience in the finance sector, where he has held various senior roles with supervisory responsibility in the areas of financial planning, value-driven reporting, business analysis and strategic planning.
+                    </p>
+                    <p>
+                      Prior to joining the Exchange, Mr. Bwiso was the General Manager Dyer and Blair Investment Bank Uganda. Since taking on the CEO role at USE, Mr. Bwiso has championed several transformative initiatives, including the Exchange's full transition to an automated trading system and the successful completion of its demutualisation in 2017.
+                    </p>
+                    <p>
+                      He has also overseen several technological innovations and product development such as the Easy Portal, Data Vending and Registry products inter alia, the establishment of the USE Specialist Market and the USE Commodities Exchange. Mr. Bwiso is the current Chairman of the East African Securities Exchanges Association (EASEA), reflecting his regional leadership in deepening capital market integration and innovation.
+                    </p>
+                    <h5>
+                      Session: "Digital Innovation and Market Development in East Africa"
+                    </h5>
+                    <p>
+                      Date: November 27, 2025 | Time: 2:00 PM - 3:30 PM |
+                      Venue: Conference Room A
                     </p>
                   </div>
                 </div>
