esg awards page changes

--- a/speakers.html
+++ b/speakers.html
@@ -1172,10 +1172,7 @@
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="ceo">
               <div class="speaker-image">
-                <img
-                  src="img/speakers/Paul Bwiso.jpeg"
-                  alt="Paul Bwiso"
-                />
+                <img src="img/speakers/Paul Bwiso.jpeg" alt="Paul Bwiso" />
                 <div class="speaker-category">CEO</div>
                 <div class="speaker-overlay">
                   <div class="speaker-social">
@@ -1952,26 +1949,51 @@
                 <div class="speaker-modal-info">
                   <h3>Paul Bwiso</h3>
                   <h4>CEO, Uganda Securities Exchange</h4>
-                  <h5>Nationality: Ugandan | Background: Investment Banking and Accounting</h5>
+                  <h5>
+                    Nationality: Ugandan | Background: Investment Banking and
+                    Accounting
+                  </h5>
                   <div class="speaker-modal-bio">
                     <p>
-                      Mr. Bwiso is the Chief Executive of the Uganda Securities Exchange (USE). He is an accomplished investment banker with extensive experience in the financial services sector in the areas of asset management, corporate finance and securities trading.
+                      Mr. Bwiso is the Chief Executive of the Uganda Securities
+                      Exchange (USE). He is an accomplished investment banker
+                      with extensive experience in the financial services sector
+                      in the areas of asset management, corporate finance and
+                      securities trading.
                     </p>
                     <p>
-                      An accountant by training, Mr. Bwiso has over 20 years' experience in the finance sector, where he has held various senior roles with supervisory responsibility in the areas of financial planning, value-driven reporting, business analysis and strategic planning.
+                      An accountant by training, Mr. Bwiso has over 20 years'
+                      experience in the finance sector, where he has held
+                      various senior roles with supervisory responsibility in
+                      the areas of financial planning, value-driven reporting,
+                      business analysis and strategic planning.
                     </p>
                     <p>
-                      Prior to joining the Exchange, Mr. Bwiso was the General Manager Dyer and Blair Investment Bank Uganda. Since taking on the CEO role at USE, Mr. Bwiso has championed several transformative initiatives, including the Exchange's full transition to an automated trading system and the successful completion of its demutualisation in 2017.
+                      Prior to joining the Exchange, Mr. Bwiso was the General
+                      Manager Dyer and Blair Investment Bank Uganda. Since
+                      taking on the CEO role at USE, Mr. Bwiso has championed
+                      several transformative initiatives, including the
+                      Exchange's full transition to an automated trading system
+                      and the successful completion of its demutualisation in
+                      2017.
                     </p>
                     <p>
-                      He has also overseen several technological innovations and product development such as the Easy Portal, Data Vending and Registry products inter alia, the establishment of the USE Specialist Market and the USE Commodities Exchange. Mr. Bwiso is the current Chairman of the East African Securities Exchanges Association (EASEA), reflecting his regional leadership in deepening capital market integration and innovation.
+                      He has also overseen several technological innovations and
+                      product development such as the Easy Portal, Data Vending
+                      and Registry products inter alia, the establishment of the
+                      USE Specialist Market and the USE Commodities Exchange.
+                      Mr. Bwiso is the current Chairman of the East African
+                      Securities Exchanges Association (EASEA), reflecting his
+                      regional leadership in deepening capital market
+                      integration and innovation.
                     </p>
                     <h5>
-                      Session: "Digital Innovation and Market Development in East Africa"
+                      Session: "Digital Innovation and Market Development in
+                      East Africa"
                     </h5>
                     <p>
-                      Date: November 27, 2025 | Time: 2:00 PM - 3:30 PM |
-                      Venue: Conference Room A
+                      Date: November 27, 2025 | Time: 2:00 PM - 3:30 PM | Venue:
+                      Conference Room A
                     </p>
                   </div>
                 </div>
