--- a/awards.html
+++ b/awards.html
@@ -972,28 +972,14 @@
         <div class="row">
           <div class="col-12">
             <ol class="process-steps">
-              <li>Sustainable Resource Management Award</li>
-              <li>Innovation in Environmental Sustainability</li>
+              <li>Sustainable Resource Management Award (Mining)</li>
               <li>Carbon Emission Champion</li>
-              <li>Transition Targets Leader</li>
-              <li>Nature and Biodiversity Protection Award</li>
-              <li>Equity, Diversity &amp; Inclusion Leadership</li>
+              <li>Diversity, Equity &amp; Inclusion Leader</li>
               <li>Community Empowerment Initiative Beyond Profit</li>
-              <li>Human Rights and Labour Practices Award</li>
-              <li>Youth Empowerment and Education Award</li>
               <li>Best ESG Disclosure &amp; Transparency Award</li>
-              <li>Ethical Governance &amp; Anti-Corruption Award</li>
-              <li>Sustainable Board Leadership Award</li>
               <li>Top ESG Performer – Listed Company</li>
-              <li>Top ESG Performer – Unlisted Entity</li>
-              <li>Top ESG Performer – Bank or DFI</li>
-              <li>Top ESG Performer – NGO or Non-Profit</li>
-              <li>ESG Pioneer of 2025 (Individual)</li>
-              <li>Sustainability Trailblazer 2025 (Country or City)</li>
-              <li>Green Finance Innovation Award 2025</li>
-              <li>ESG Capacity Building Award (New)</li>
-              <li>Best Use of ESG Data &amp; Technology</li>
-              <li>Most Sustainable African Stock Exchange 2025</li>
+              <li>Top ESG Performer – Financial Institution</li>
+              <li>ESG Pioneer of 2025</li>
             </ol>
           </div>
         </div>
