--- a/about.html
+++ b/about.html
@@ -819,8 +819,24 @@
                   <li class="nav-item">
                     <a class="nav-link" href="sponsors.html">SPONSORS</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="awards.html">ESG AWARDS</a>
+                  <li class="nav-item dropdown">
+                    <a
+                      class="nav-link dropdown-toggle"
+                      href="#"
+                      id="esgDropdown"
+                      role="button"
+                      data-toggle="dropdown"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                    >
+                      ESG AWARDS
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="esgDropdown">
+                      <a class="dropdown-item" href="awards.html"
+                        >Award Details</a
+                      >
+                      <a class="dropdown-item" href="judges.html">Judges</a>
+                    </div>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="accommodation.html"
