--- a/judges.html
+++ b/judges.html
@@ -364,7 +364,7 @@
         transition: all 0.3s ease;
         margin-bottom: 30px;
         position: relative;
-        height: 600px;
+        height: 640px;
       }
 
       .judge-card:hover {
@@ -1147,6 +1147,41 @@
             </div>
           </div>
 
+          <!-- Judge 7: Loise Wangui Musyoka -->
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="judge-card">
+              <div class="judge-image">
+                <img src="img/judges/loise.jpg" alt="Loise Wangui Musyoka" />
+                <div class="judge-category">Sustainability & ESG Expert</div>
+                <div class="judge-overlay">
+                  <div class="judge-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-globe"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="judge-info">
+                <h3>Loise Wangui Musyoka</h3>
+                <h4>Managing Partner & ESG Lead, Protos Capital LLP</h4>
+                <p>
+                  Certified sustainability professional with 17 years'
+                  experience in capital markets, climate finance, ESG
+                  integration, and reporting. Developed ESG and sustainability
+                  frameworks for multiple African markets.
+                </p>
+                <a
+                  href="#"
+                  class="judge-btn"
+                  data-toggle="modal"
+                  data-target="#judgeModal7"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
+
           <!-- Additional judge cards will be added here -->
         </div>
       </div>
@@ -1848,6 +1883,98 @@
                   sponsorship rather than mentorship alone. She strives to
                   engage all genders in the effort to foster DEI & ESG in their
                   organizations and communities.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Judge Modal 7: Loise Wangui Musyoka -->
+    <div
+      class="modal fade"
+      id="judgeModal7"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="judgeModal7Label"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="judgeModal7Label">
+              Loise Wangui Musyoka
+            </h5>
+            <button
+              type="button"
+              class="close text-white"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hul="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-3">
+                <img
+                  src="img/judges/loise.jpg"
+                  alt="Loise Wangui Musyoka"
+                  class="img-fluid rounded mb-3"
+                />
+              </div>
+              <div class="col-md-9">
+                <h5>Current Role</h5>
+                <p>
+                  Managing Partner & ESG Lead, Protos Capital LLP – a leading
+                  sustainability integration, impact modelling, and
+                  sustainability reporting consultancy in Africa.
+                </p>
+                <h5>Professional Background</h5>
+                <p>
+                  Certified sustainability professional with a legal and finance
+                  background and 17 years of experience. Expert in capital
+                  markets, climate adaptation finance, ESG integration and
+                  reporting, and value chain GHG emissions assessment.
+                </p>
+                <h5>Key Achievements</h5>
+                <ul>
+                  <li>
+                    Developed ESG Disclosure Guidelines for listed companies in
+                    Kenya
+                  </li>
+                  <li>Developed Listing Rules for Green Bonds</li>
+                  <li>
+                    Developed ESG Reporting Guidelines for Rwanda Stock Exchange
+                  </li>
+                  <li>
+                    Developed Eco-Labelling Guidelines for Kenyan Manufacturers
+                  </li>
+                  <li>
+                    Currently developing a unified sustainability framework for
+                    14 SADC region capital markets
+                  </li>
+                </ul>
+                <h5>Education</h5>
+                <ul>
+                  <li>
+                    Master of Laws (LL.M) in Public Finance and Financial
+                    Services Law – University of Nairobi
+                  </li>
+                  <li>
+                    Bachelor of Laws Degree (LL.B) – University of Nairobi
+                  </li>
+                </ul>
+                <h5>Impact & Thought Leadership</h5>
+                <p>
+                  Passionate about building sustainable businesses that maximize
+                  returns and positive impact. Works with businesses, policy
+                  makers, and investors to integrate ESG into investment
+                  decision making, strategy, risk management, and communication.
+                  Active contributor to the sustainable growth agenda through
+                  think tanks, training, publications, and thought leadership.
+                  Technical expert with the ESG Exchange in South Africa.
                 </p>
               </div>
             </div>
