--- a/sponsors.html
+++ b/sponsors.html
@@ -612,25 +612,36 @@
                 src="img/sponsors/BRD.png"
                 alt="BRD"
                 class="sponsor-logo m-3"
-                style="max-height: 80px; max-width: 180px; object-fit: contain"
               />
               <img
                 src="img/sponsors/Bank of Kigali.png"
                 alt="Bank of Kigali"
                 class="sponsor-logo m-3"
-                style="max-height: 80px; max-width: 180px; object-fit: contain"
               />
               <img
                 src="img/sponsors/CMA.png"
                 alt="CMA"
                 class="sponsor-logo m-3"
-                style="max-height: 80px; max-width: 180px; object-fit: contain"
               />
               <img
                 src="img/sponsors/Ecobank.png"
                 alt="Ecobank"
                 class="sponsor-logo m-3"
-                style="max-height: 80px; max-width: 180px; object-fit: contain"
+              />
+              <img
+                src="img/sponsors/Arqatech.png"
+                alt="Arqatech"
+                class="sponsor-logo m-3"
+              />
+              <img
+                src="img/sponsors/InfoTech.png"
+                alt="InfoTech"
+                class="sponsor-logo m-3"
+              />
+              <img
+                src="img/sponsors/Montran.png"
+                alt="Montran"
+                class="sponsor-logo m-3"
               />
             </div>
           </div>
