--- a/speakers.html
+++ b/speakers.html
@@ -460,6 +460,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        object-position: top;
         transition: all 0.3s ease;
       }
 
